Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
             <td><span class="tag finance">Databackup Management</span></td>
             <td><a href="https://docs.google.com/spreadsheets/d/1pWNimOqEi5whBLd0KDXEFmxEeWO6_eye7Efe-YAjaoQ/edit?usp=sharing" target="_blank">Open Sheet</a></td>
 
-                <tr data-category="Databackup">
-            <td> IIT Tools List Summary </td>
+            <tr data-category="Databackup">
+            <td>Databackup Management Link </td>
             <td><span class="tag finance">Databackup Management</span></td>
-            <td><a href="https://docs.google.com/spreadsheets/d/1sb2__0p4ExuveZI8OXtpTF3sVRQ1hC0W/edit?usp=sharing&ouid=116416913859981756532&rtpof=true&sd=true" target="_blank">Open Sheet</a></td>
+            <td><a href="https://docs.google.com/spreadsheets/d/1pWNimOqEi5whBLd0KDXEFmxEeWO6_eye7Efe-YAjaoQ/edit?usp=sharing" target="_blank">Open Sheet</a></td>
+
 
             <tr data-category="Installation & Commissioning">
             <td> Machine Installation & Commissioning Link </td>
@@ -175,5 +176,6 @@ categoryFilter.addEventListener('change', filterTable);
 
 </body>
 </html>
+
 
 
