Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -96,11 +96,16 @@
             <td>Databackup Management Link </td>
             <td><span class="tag finance">Databackup Management</span></td>
             <td><a href="https://docs.google.com/spreadsheets/d/1pWNimOqEi5whBLd0KDXEFmxEeWO6_eye7Efe-YAjaoQ/edit?usp=sharing" target="_blank">Open Sheet</a></td>
+              
+            <tr data-category="Databackup">
+            <td> IIT Computer Hardware Spare Inventory Items </td>
+            <td><span class="tag finance">Databackup Management</span></td>
+            <td><a href="https://docs.google.com/spreadsheets/d/1HnTTyWXXopmMn-mpxQ_q4xJxM_8capCTKBPpGdPtK34/edit?usp=sharing" target="_blank">Open Sheet</a></td>
 
             <tr data-category="Databackup">
-            <td>Databackup Management Link </td>
+            <td>Industrial IT Tools Summary </td>
             <td><span class="tag finance">Databackup Management</span></td>
-            <td><a href="https://docs.google.com/spreadsheets/d/1pWNimOqEi5whBLd0KDXEFmxEeWO6_eye7Efe-YAjaoQ/edit?usp=sharing" target="_blank">Open Sheet</a></td>
+            <td><a href="https://docs.google.com/spreadsheets/d/1sb2__0p4ExuveZI8OXtpTF3sVRQ1hC0W/edit?usp=sharing&ouid=116416913859981756532&rtpof=true&sd=true" target="_blank">Open Sheet</a></td>
 
 
             <tr data-category="Installation & Commissioning">
@@ -176,6 +181,7 @@ categoryFilter.addEventListener('change', filterTable);
 
 </body>
 </html>
+
 
 
 
