Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              <tr data-category="Support">
             <td>Preventive Maintenance Summary</td>
             <td><span class="tag finance">IIT Support</span></td>
-            <td><a href="https://docs.google.com/spreadsheets/d/1bLM35LBYPTVWiPEZqRZo3ycggMExQs-F/edit?usp=sharing&ouid=116416913859981756532&rtpof=true&sd=true" target="_blank">Open Sheet</a></td>
+            <td><a href="https://docs.google.com/spreadsheets/d/1bLM35LBYPTVWiPEZqRZo3ycggMExQs-F/edit?gid=1395323195#gid=1395323195" target="_blank">Open Sheet</a></td>
            
             <tr data-category="Support">
             <td>Final Inventory Industrial IT, ICT Dept.</td>
@@ -181,6 +181,7 @@ categoryFilter.addEventListener('change', filterTable);
 
 </body>
 </html>
+
 
 
 
